Fix issue where author name is clipped on bottom

--- a/app/styles/components/file-grid.scss
+++ b/app/styles/components/file-grid.scss
@@ -53,6 +53,7 @@
                 display: -webkit-box;
                 -webkit-line-clamp: 1;
                 -webkit-box-orient: vertical;
+                height: 15px;
             }
         }
     }
